// Copyright (c) The dgc.network
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";


message Proposal {
  enum Role {
    transferOwnership = 0;
    transferCustodianship = 1;
    authorizeReporter = 2;
    buyDGC = 3;
    sellDGC = 4;
    creditDGC = 5;
    transferDGC = 6;
  }

  enum Status {
    OPEN = 0;
    ACCEPTED = 1;
    REJECTED = 2;
    CANCELED = 3;
    CLOSED = 4;
  }

  string proposal_id = 1;

  // What the Proposal is for -- transferring ownership, transferring
  // custodianship, or authorizing a reporter.
  Role role = 2;

  // The status of the Proposal. For a given Record and receiving
  // Participant, there can be only one open Proposal at a time for each
  // role.
  Status status = 3;

  // The time at which the Proposal was created
  uint64 timestamp = 4;

  // The public key of the Participant sending the Proposal. This Participant must
  // be the owner of the Record (or the custodian, if the Proposal is
  // to transfer custodianship).
  string issuing_participant = 5;

  // The public key of the Participant to whom the Proposal is sent.
  string receiving_participant = 6;

  string record_id = 7;

  // The names of properties for which the reporter is being authorized
  // (empty for owner or custodian transfers)
  repeated string properties = 8;

  // The human-readable terms of transfer.
  string terms = 9;

  // dg coin transfer/exchange 
  double dg_coin_amount = 10;
  string currency_iso_codes = 11; //iso 4217: USD, EUR, JPY, TWD
  double currency_quote_amount = 12;

  double dg_coin_exchanged = 13;

}

message ProposalContainer {
  repeated Proposal entries = 1;
}

message Exchange {
  // The time at which the last price was created
  uint64 timestamp = 1;
  double last_dgc_price = 2;
  string currency_iso_codes = 3; //iso 4217: USD, EUR, JPY, TWD
  double last_currency_price = 4;
  string buy_proposal_id = 5;
  string sell_proposal_id = 6;

}

message ExchangeContainer {
  repeated Exchange entries = 1;
}

